--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,13 +1,3 @@
 
-
-	// Main Primary color */
-$c-dark1: #56514E;
-$c-dark2: #3F3834;
-$c-dark3: #35363A;
-$c-dark4: #24262A;
-$c-orange1: #FF975A;
-$c-orange2: #FF8238;
-$c-white:white;
-$c-text:lightgray;
-
-
+$text-color-main:white;
+$text-color:lightgray
